fix banner readability;

--- a/assets/styles/index/banner/_banner.scss
+++ b/assets/styles/index/banner/_banner.scss
@@ -3,6 +3,7 @@
   background: url("../imgs/banner-bg.png") center no-repeat;
   background-size: cover;
   color: white;
+  text-shadow: 4px 2px 2px #0004;
 
   padding: 2rem 10%;
   display: flex;
@@ -10,14 +11,19 @@
   gap: 1rem;
 
   .title {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
 
-    margin-top: 4rem;
+    margin-top: 7rem;
+  }
+
+  .desc {
+    font-weight: 600;
   }
 
   .btn {
     color: inherit;
+    font-weight: 400;
     width: 40%;
   }
 }
