--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -139,17 +139,22 @@
   background: url("../imgs/banner-bg.png") center no-repeat;
   background-size: cover;
   color: white;
+  text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.2666666667);
   padding: 2rem 10%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .banner__sect .title {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 700;
-  margin-top: 4rem;
+  margin-top: 7rem;
+}
+.banner__sect .desc {
+  font-weight: 600;
 }
 .banner__sect .btn {
   color: inherit;
+  font-weight: 400;
   width: 40%;
 }/*# sourceMappingURL=style.css.map */
